test/parser/diagnostic-disjunctive-list.delta.output
diagnostic-disjunctive-list.delta:6:15: error: unexpected '>'
    var a = A<>();
              ^
diagnostic-disjunctive-list.delta:6:15: error: unexpected '>'
    var a = A<>();
              ^
