test/parser/diagnostic-disjunctive-list.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // TODO: Should say 'expected type'.
    // CHECK: [[@LINE+1]]:15: error: unexpected '>'
    var a = A<>();
}
